feat: Add manifest to Install request payload
