# openapi.yml
@@ -968,6 +968,13 @@ components:
                 items:
                   $ref: "#/components/schemas/OptionsRef"
                 description: Configuration values for the app components
+              _manifest:
+                type: array
+                description: Manifest ID used to create/update the entity
+                items:
+                  type: string
+                  format: uuid
+                  example: 123e4567-e89b-12d3-a456-426614174000
 
   securitySchemes:
     EpilotAuth:
